[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UniformEditor.gd" type="Script" id=1]

[node name="UniformEditor" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="lbl_uniform_name" type="Label" parent="."]
margin_top = 398.0
margin_right = 1440.0
margin_bottom = 412.0
size_flags_horizontal = 3
text = "uniform_name"
clip_text = true

[node name="int" type="SpinBox" parent="."]
visible = false
margin_left = 644.0
margin_right = 1284.0
margin_bottom = 810.0
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true

[node name="float" type="SpinBox" parent="."]
visible = false
margin_left = 644.0
margin_right = 1284.0
margin_bottom = 810.0
size_flags_horizontal = 3
step = 0.1
allow_greater = true
allow_lesser = true

[node name="vec2" type="HBoxContainer" parent="."]
visible = false
margin_left = 1288.0
margin_right = 1440.0
margin_bottom = 810.0

[node name="x" type="SpinBox" parent="vec2"]
margin_right = 74.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "x"

[node name="y" type="SpinBox" parent="vec2"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "y"

[node name="vec3" type="VBoxContainer" parent="."]
visible = false
margin_left = 1288.0
margin_right = 1440.0
margin_bottom = 810.0

[node name="x" type="SpinBox" parent="vec3"]
margin_right = 74.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "x"

[node name="y" type="SpinBox" parent="vec3"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "y"

[node name="z" type="SpinBox" parent="vec3"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "z"

[node name="vec4" type="GridContainer" parent="."]
visible = false
margin_left = 1288.0
margin_right = 1440.0
margin_bottom = 810.0
columns = 2

[node name="x" type="SpinBox" parent="vec4"]
margin_right = 74.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "x"

[node name="y" type="SpinBox" parent="vec4"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "y"

[node name="z" type="SpinBox" parent="vec4"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "z"

[node name="w" type="SpinBox" parent="vec4"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 810.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "w"

[connection signal="value_changed" from="int" to="." method="_on_float_value_changed"]
[connection signal="value_changed" from="float" to="." method="_on_float_value_changed"]
[connection signal="value_changed" from="vec2/x" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="vec2/y" to="." method="_on_y_value_changed"]
[connection signal="value_changed" from="vec3/x" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="vec3/y" to="." method="_on_y_value_changed"]
[connection signal="value_changed" from="vec3/z" to="." method="_on_z_value_changed"]
[connection signal="value_changed" from="vec4/x" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="vec4/z" to="." method="_on_z_value_changed"]
[connection signal="value_changed" from="vec4/w" to="." method="_on_w_value_changed"]
